welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: object java.awt.Color is not a value
  Color = remplirTableau1(hauteurMonde)
  ^Array2:10: error: object java.awt.Color is not a value
      setCouleurBrosse(Color(k+decalage%hauteurMonde))
                       ^Array2:18: error: not found: type int
def remplirTableau1(hauteurMonde :int):Array[Color] = {
                                  ^